# kosciuszkon-2025

./: README.md
backend/: Dockerfile.backend  docker-compose.yaml  pom.xml
backend-ai/: .env.example  README.md  pyproject.toml
backend-ai/backend_ai/: __init__.py  api.py  openai_client.py
backend/.backend_app/: docker-compose.yaml
backend/src/main/java/com/greencity/backend/: Application.java  BackendApplication.java
backend/src/main/resources/: application.properties  application.yml
backend/src/main/resources/db/migration/: V20250601.0310__Create_light_table.sql
front/: .gitignore  angular.json  package-lock.json  package.json
front/src/: index.html  styles.scss
front/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts
front/src/app/component/brightness/: brightness.component.scss  brightness.component.ts
front/src/app/form/: light-form.component.html  light-form.component.scss  light-form.component.ts
front/src/app/mock-data/: mock-data.ts
front/src/app/models/: geo-position-radius-dto.ts  light-dto.ts  light-entry.ts  map-entry.ts  models.ts  pedestrian-entry.ts  pedestrian.ts  time-period.ts
front/src/app/service/: light-map-bridge.service.ts  light.service.ts  search-box.service.ts  websocket.service.ts
front/src/app/view/: map-view.component.ts
front/src/app/view/light-details/: light-details-view.component.scss  light-details-view.component.ts
front/src/app/view/map/: map-view.component.scss  map-view.component.ts
front/src/environment/: environment.ts
(+34 files in other folders)
